[gd_scene load_steps=6 format=2]

[ext_resource path="res://TitleScreen/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://NewButtons/background_stripe.png" type="Texture" id=2]
[ext_resource path="res://NewButtons/EXIT.png" type="Texture" id=4]
[ext_resource path="res://NewButtons/OPTIONS.png" type="Texture" id=5]
[ext_resource path="res://NewButtons/PLAY copy.png" type="Texture" id=6]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )
First_Level = "res://Levels/TestScene.tscn"

[node name="BG" type="Panel" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -15.0
margin_right = 16.0
margin_bottom = 64.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="BG/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 336.0
margin_bottom = 243.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="."]
margin_left = 60.2164
margin_top = 159.0
margin_right = 95.2164
margin_bottom = 167.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="."]
margin_left = 129.0
margin_top = 159.0
margin_right = 184.0
margin_bottom = 168.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 230.0
margin_top = 159.0
margin_right = 264.0
margin_bottom = 168.0
texture_normal = ExtResource( 4 )
[connection signal="pressed" from="Play" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
